--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "generate-password": "^1.7.0",
     "hbs": "^4.2.0",
     "http-error": "^0.0.6",
     "jsonwebtoken": "^8.5.1",
