--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "dev" : "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.4.0",
     "alert": "^5.1.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
